fixed some bugs and added basic loc for clarity

--- a/TGC/localisation/00_events_0500000.csv
+++ b/TGC/localisation/00_events_0500000.csv
@@ -58,17 +58,17 @@ EVTOPTB500013;Let it go. They called our bluff.;;;;;;;;;;;;;x
 EVTDESC500014;Although the $FROMCOUNTRY_ADJ$s were the one to approach us over a joint agreement to suppress the Polish rebellion, they seem to have allowed the passage of French troops to Poland, thereby betraying the Alvensleben Convention. Many of our top statesmen and generals are infuriated with this doublecross of the $FROMCOUNTRY_ADJ$, and it is rumored that even the Tsar is livid. Now, $FROMCOUNTRY$ is effectively supporting the Poles in their treachery, and as such, we must consider them a foe on par with $FROMCOUNTRY$.;;;;;;;;;;;;;x
 EVTNAME500014;The Prussian Betrayal;;;;;;;;;;;;;x
 EVTOPTA500014;They'll burn with the rest of those damned traitors!;;;;;;;;;;;;;x
-EVTDESC500015;Traugutt, the insurrection general, and four other members of the Polish Government were apprehended by $COUNTRY_ADJ$ troops and executed at the Warsaw citadel. In the course of the war several battles and skirmishes were fought and some twenty-five thousand Poles were killed. The $COUNTRY_ADJ$ $MONARCHTITLE$ passed laws and edicts to make the land an integral part of $COUNTRY$'s territory and all that remains now is to decide the fate of the rebels.;;;;;;;;;;;;;x
-EVTNAME500015;The Polish Rebellion is Crushed;;;;;;;;;;;;;x
-EVTOPTA500015;Exile them to Siberia!;;;;;;;;;;;;;x
+EVTDESC500015;As expected, our mighty forces have crushed this little 'rebellion' and restored our rightful rule in the former territories of the Commonwealth. As we have triumphed, we have no reason not to incorporate these lands wholesale into the territory of $COUNTRY$. From now on, the Polish lands, or now Privislinskiy Krai, shall be directly ruled by our capable administrators.\n Traugutt, the insurrection general, and four other members of the Polish Government were apprehended by $COUNTRY_ADJ$ troops and executed at the Warsaw citadel. In the course of the war several battles and skirmishes were fought and some twenty-five thousand Poles were killed. The $COUNTRY_ADJ$ $MONARCHTITLE$ passed laws and edicts to make the land an integral part of $COUNTRY$'s territory and all that remains now is to decide the fate of the rebels.;;;;;;;;;;;;;x
+EVTNAME500015;$COUNTRY_ADJ$ Victory in Poland;;;;;;;;;;;;;x
+EVTOPTA500015;Exile those bastards to Siberia!;;;;;;;;;;;;;x
 EVTOPTB500015;Be lenient with them.;;;;;;;;;;;;;x
 EVTDESC500016;For too long the lands of Poland have been partitioned and divided among imperialistic foreigners. No more! Today, we shake off the remnants of foreign rule from our country, paving the way for the future of Poland.;;;;;;;;;;;;;x
 EVTNAME500016;A Polish State;;;;;;;;;;;;;x
 EVTOPTA500016;We will unite!;;;;;;;;;;;;;x
 EVTOPTB500016;We enjoy independence too much.;;;;;;;;;;;;;x
-EVTDESC500017;As expected, our mighty forces have crushed this little 'rebellion' and restored our rightful rule in the former territories of the Commonwealth. As we have triumphed, we have no reason not to incorporate these lands wholesale into the territory of $COUNTRY$. From now on, the Polish lands, or now Privislinskiy Krai, shall be directly ruled by our capable administrators.;;;;;;;;;;;;;x
-EVTNAME500017;$COUNTRY_ADJ$ Victory in Poland;;;;;;;;;;;;;x
-EVTOPTA500017;$COUNTRY$ is victorious, as we should.;;;;;;;;;;;;;x
+EVTDESC500017;We have won.;;;;;;;;;;;;;x
+EVTNAME500017;The Commonwealth Victorious;;;;;;;;;;;;;x
+EVTOPTA500017;Poland is not yet lost!;;;;;;;;;;;;;x
 EVTDESC500018;Somehow, despite our overwhelming material advantage, Polish forces have managed to repel our forces. While the damned foreign powers were already sympathetic to these Polish malcontents, they are now demanding that we withdraw fully from Poland and Lithuania, and recognize their rights as a sovereign country. While our advisors initially scoffed at this "offer," mounting international pressure and threats of collective Great Power intervention have forced us to the negotiating table, where our ambassadors were pressured into signing a treaty recognizing Polish sovereignty.;;;;;;;;;;;;;x
 EVTNAME500018;$COUNTRY_ADJ$ Defeat in Poland;;;;;;;;;;;;;x
 EVTOPTA500018;We must reform.;;;;;;;;;;;;;x
@@ -85,6 +85,60 @@ XEVTDESC5000180;With both the core lands of the Kingdom of Poland and the Grand 
 XEVTNAME5000180;The Uprising Spreads to the Southwest;;;;;;;;;;;;;x
 XEVTOPTA5000180;Death to the rebels! Long live the Tsar!;;;;;;;;;;;;;x
 XEVTOPTB5000180;This is unwinnable. We must let them go.;;;;;;;;;;;;;x
+EVTDESC500600;Foreign Aid;;;;;;;;;;;;;x
+EVTNAME500600;We can request aid from friendly Great Powers.;;;;;;;;;;;;;x
+EVTOPTA500600;Let us nationalize stuff.;;;;;;;;;;;;;x
+EVTOPTB500600;Let us ask the French.;;;;;;;;;;;;;x
+EVTOPTC500600;Let us ask the Austrians.;;;;;;;;;;;;;x
+EVTOPTD500600;Let us ask the Prussians.;;;;;;;;;;;;;x
+EVTDESC500601;Nationalization Page 1;;;;;;;;;;;;;x
+EVTNAME500601;Nationalization Page 1;;;;;;;;;;;;;x
+EVTOPTA500601;Factory Debuff;;;;;;;;;;;;;x
+EVTOPTB500601;Military Debuff;;;;;;;;;;;;;x
+EVTOPTC500601;Financial Debuff;;;;;;;;;;;;;x
+EVTOPTD500601;Next Page;;;;;;;;;;;;;x
+EVTDESC500602;Nationalization Page 2;;;;;;;;;;;;;x
+EVTNAME500602;Nationalization Page 2;;;;;;;;;;;;;x
+EVTOPTA500602;Tariffs Debuff;;;;;;;;;;;;;x
+EVTOPTB500602;Research Debuff;;;;;;;;;;;;;x
+EVTOPTC500602;Lose Relations;;;;;;;;;;;;;x
+EVTOPTD500602;Close;;;;;;;;;;;;;x
+EVTDESC500603;French Aid Page 1;;;;;;;;;;;;;x
+EVTNAME500603;French Aid Page 1;;;;;;;;;;;;;x
+EVTOPTA500603;Research Buff;;;;;;;;;;;;;x
+EVTOPTB500603;Military Buff;;;;;;;;;;;;;x
+EVTOPTC500603;Money;;;;;;;;;;;;;x
+EVTOPTD500603;Next Page;;;;;;;;;;;;;x
+EVTDESC500604;French Aid Page 2;;;;;;;;;;;;;x
+EVTNAME500604;French Aid Page 2;;;;;;;;;;;;;x
+EVTOPTA500604;Education Buff;;;;;;;;;;;;;x
+EVTOPTB500604;Factory Buff;;;;;;;;;;;;;x
+EVTOPTC500604;Less Infamy;;;;;;;;;;;;;x
+EVTOPTD500604;Close;;;;;;;;;;;;;x
+EVTDESC500605;Austrian Aid Page 1;;;;;;;;;;;;;x
+EVTNAME500605;Austrian Aid Page 1;;;;;;;;;;;;;x
+EVTOPTA500605;Research Buff;;;;;;;;;;;;;x
+EVTOPTB500605;Military Buff;;;;;;;;;;;;;x
+EVTOPTC500605;Money;;;;;;;;;;;;;x
+EVTOPTD500605;Next Page;;;;;;;;;;;;;x
+EVTDESC500606;Austrian Aid Page 2;;;;;;;;;;;;;x
+EVTNAME500606;Austrian Aid Page 2;;;;;;;;;;;;;x
+EVTOPTA500606;Education Buff;;;;;;;;;;;;;x
+EVTOPTB500606;Factory Buff;;;;;;;;;;;;;x
+EVTOPTC500606;Less Infamy;;;;;;;;;;;;;x
+EVTOPTD500606;Close;;;;;;;;;;;;;x
+EVTDESC500607;Prussian Aid Page 1;;;;;;;;;;;;;x
+EVTNAME500607;Prussian Aid Page 1;;;;;;;;;;;;;x
+EVTOPTA500607;Research Buff;;;;;;;;;;;;;x
+EVTOPTB500607;Military Buff;;;;;;;;;;;;;x
+EVTOPTC500607;Money;;;;;;;;;;;;;x
+EVTOPTD500607;Next Page;;;;;;;;;;;;;x
+EVTDESC500608;Prussian Aid Page 2;;;;;;;;;;;;;x
+EVTNAME500608;Prussian Aid Page 2;;;;;;;;;;;;;x
+EVTOPTA500608;Education Buff;;;;;;;;;;;;;x
+EVTOPTB500608;Factory Buff;;;;;;;;;;;;;x
+EVTOPTC500608;Less Infamy;;;;;;;;;;;;;x
+EVTOPTD500608;Close;;;;;;;;;;;;;x
 EVTDESC501114;20 years ago, our Empire rightfully claimed vast territories in Northwestern Pacific America. Various loyal servants of the Empire, explorers and merchants such as the famed Baranov and Rezanov, were keen on the idea of planting the Russian Imperial flag on as much of the Pacific as possible. They established several key trading posts in Alaska, California, Hawaii, and other islands. However, despite their successess, support from the central government was usually low, owing it to a cautious attitude of distant St. Petersburg, and even more cautious Tsar Paul. Tsar Aleksandr I curtailed Russian expansion in the area even further, concluding Russo-American Treaty of 1824 and Anglo-Russian Convention of 1825, giving up our claims south of the 54th parallel. Maybe that was a mistake. Whispers in the government are again talking about opportunities in sparsely settled Pacifican coast. Some say we should have listened to Mordvinov about California. Some say Nesselrode was right, it is a waste of resources and time. Whatever the Emperor decides, the Empire will follow.;;;;;;;;;;;;;x 
 EVTNAME501114;Claims in the Pacific;;;;;;;;;;;;;x
 EVTOPTA501114;Reassert our claims. Call Mordvinov back from retirement.;;;;;;;;;;;;;x
