--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -3503,11 +3503,11 @@ PROV3501;Rio San Juan;;;;;;;;;;;;;x
 PROV3502;San Juan del Norte;;;;;;;;;;;;;x
 PROV3503;Veluwe;;;;;;;;;;;;;x
 PROV3504;Achterhoek;;;;;;;;;;;;;x
-PROV3505;Utenos;;;;;;;;;;;;;x
-PROV3506;Tamel Aike;;;;;;;;;;;;;x
-PROV3507;Sierra de Sangra;;;;;;;;;;;;;x
-PROV3508;Karukinka;;;;;;;;;;;;;x
-PROV3509;Makünchawü;;;;;;;;;;;;;x
+PROV3505;Panevezys;;;;;;;;;;;;;x
+PROV3506;Piotrkow;;;;;;;;;;;;;x
+PROV3507;Ostroleka;;;;;;;;;;;;;x
+PROV3508;Siedlce;;;;;;;;;;;;;x
+PROV3509;Rzeszow;;;;;;;;;;;;;x
 PROV3510;Süen;;;;;;;;;;;;;x
 PROV3511;Kaüas;;;;;;;;;;;;;x
 PROV3512;Cerro Pináculo;;;;;;;;;;;;;x
