--- a/TGC/localisation/00_foci.csv
+++ b/TGC/localisation/00_foci.csv
@@ -68,6 +68,7 @@ promote_farmers;Encourage Farmers;;;;;;;;;;;;;x
 promote_labourers;Encourage Labourers;;;;;;;;;;;;;x
 promote_officers;Encourage Officers;;;;;;;;;;;;;x
 promote_soldiers;Encourage Soldiers;;;;;;;;;;;;;x
+promote_pioneers;Encourage Pioneers;;;;;;;;;;;;;x
 promotion_focus;Promotion;;;;;;;;;;;;;x
 rail_focus;Colonial Policy;;;;;;;;;;;;;x
 reactionary_focus;Steer party loyalty towards §Yreactionary§!;Loyauté envers le parti §Yréactionnaire§!;Parteiloyalität gegenüber §Yreactionary§!;;;;;;;;;;;x
