--- a/TGCDirectImmigration/localisation/00_modifiers.csv
+++ b/TGCDirectImmigration/localisation/00_modifiers.csv
@@ -536,6 +536,8 @@ gauche_buffoon_desc;For the love of God, don’t let our leader interact with fore
 generalised_debt_default;Generalized Debt Default;;;;;;;;;;;;;x
 generic_neutrality;Political Neutrality;;;;;;;;;;;;;x
 generic_neutrality_desc;Our country deliberately takes no sides. We do not go to war, even against those the world universally reviles, and thus expect that no one shall go to war against us. This means we will likely never achieve recognition as a ‘mover and shaker’, but it also protects us. We shall not abandon our principles for the sake of power and influence.;;;;;;;;;;;;;x
+genocide;Systematic Extermination;;;;;;;;;;;;;x
+genocide_desc;Our aggressive policies against minorities are promoting a shift in our country.;;;;;;;;;;;;;x
 german-menace;The German Hun;;;;;;;;;;;;;x
 german-menace_desc;Being witness to the new rising power of Germany is a terrifing sight to behold. We must ready ourselves for conflict, if our nation wishes to survive.;;;;;;;;;;;;;x
 german_grain_imports;Germany Importing our Grain;;;;;;;;;;;;;x
@@ -674,6 +676,8 @@ kalmar_union;Kalmar Union;;;;;;;;;;;;;x
 kalmar_union_desc;We have agreed in principle to a closer bond with the other Scandinavian nations.;;;;;;;;;;;;;x
 karadzic_reforms;Karadzic Reforms;;;;;;;;;;;;;x
 karadzic_reforms_desc;Vuk Karadzic has reformed language education in our schools. Our children can now learn the Serbian language more easily than before.;;;;;;;;;;;;;x
+remove_undesireables;Integration Policy;;;;;;;;;;;;;x
+remove_undesireables_desc;The violence unleashed by liberation wars against Muslim inhabitants of our lands is still felt today.;;;;;;;;;;;;;x
 kettler_denkmal;Memorial to Foreign Diplomat;;;;;;;;;;;;;x
 kettler_denkmal_desc;This memorial to a foreign diplomat stands as a permanent reminder to our people that our independence is being sold short by our government.;;;;;;;;;;;;;x
 kiel_canal;Kiel Canal;;;;;;;;;;;;;x
@@ -681,6 +685,8 @@ kiel_canal_construction;Kiel Canal Under Construction;;;;;;;;;;;;;x
 kiel_canal_construction_desc;Our nation is dedicating its resources to build a great Canal.;;;;;;;;;;;;;x
 kiel_canal_dividend;The Kiel Canal;;;;;;;;;;;;;x
 kiel_canal_dividend_desc;We own the Kiel Canal, linking the Baltic and the North Sea without the need to sail around Denmark, and we receive the dividends of its toll.;;;;;;;;;;;;;x
+killcommies;Do the Thing.;;;;;;;;;;;;;x
+killlandlords;No, the Other Thing.;;;;;;;;;;;;;x
 kinda_bad_badboy;International Sanctions;;;;;;;;;;;;;x
 kinda_bad_badboy_desc;We have been declared a threat to global safety and international balance of power. Sanctions have been applied to our country and citizens and we have been warned that the great powers will worsen these sanctions in case we continue our aggressiveness.;;;;;;;;;;;;;x
 king_cotton;King Cotton;;;;;;;;;;;;;x
@@ -1050,6 +1056,8 @@ power_vacuum;Power Vacuum;;;;;;;;;;;;;x
 power_vacuum_desc;The government is in a state of transition as it struggles to find its new leader? or fall in the process.;;;;;;;;;;;;;x
 preparations_for_war;Preparations for War;;;;;;;;;;;;;x
 preparations_for_war_desc;There’s an incoming war, or so some say.;;;;;;;;;;;;;x
+preparations_to_kill;Concentration Camps;;;;;;;;;;;;;x
+preparations_to_kill_desc;We are solving the minorities problem in our country. Minorities are being sorted out in concentration camps and waiting for their fate, or being delivered to it already.;;;;;;;;;;;;;x
 preparing_for_war;Preparing for War;;;;;;;;;;;;;x
 preparing_for_war_desc;War with the North is inevitable and we must be ready for it.;;;;;;;;;;;;;x
 prince_of_terror;Prince of Terror;;;;;;;;;;;;;x
