did west ukraine provs

--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -958,8 +958,8 @@ PROV956;Rovno;;;;;;;;;;;;;x
 PROV957;Kovelj;;;;;;;;;;;;;x
 PROV958;Kijevu;;;;;;;;;;;;;x
 PROV959;Zhitomiru;;;;;;;;;;;;;x
-PROV960;Umanj;;;;;;;;;;;;;x
-PROV961;Cherkasy;;;;;;;;;;;;;x
+PROV960;Berdychev;;;;;;;;;;;;;x
+PROV961;Uman;;;;;;;;;;;;;x
 PROV962;Chernigovu;;;;;;;;;;;;;x
 PROV963;Lubny;;;;;;;;;;;;;x
 PROV964;Simferopolj;;;;;;;;;;;;;x
@@ -3512,15 +3512,15 @@ PROV3510;Wilejka;;;;;;;;;;;;;x
 PROV3511;Swieciany;;;;;;;;;;;;;x
 PROV3512;Borysow;;;;;;;;;;;;;x
 PROV3513;Rzeczyca;;;;;;;;;;;;;x
-PROV3514;Paso Codorniz;;;;;;;;;;;;;x
-PROV3515;Sierra Contreras;;;;;;;;;;;;;x
-PROV3516;Kelælkces;;;;;;;;;;;;;x
-PROV3517;Pali Aike;;;;;;;;;;;;;x
-PROV3518;Concepción del Nuevo Extremo;;;;;;;;;;;;;x
-PROV3519;Cabo de Hornos;;;;;;;;;;;;;x
-PROV3520;Wulaia;;;;;;;;;;;;;x
-PROV3521;Puerto Arenas;;;;;;;;;;;;;x
-PROV3522;Santiago de Castro;;;;;;;;;;;;;x
+PROV3514;Lutsk;;;;;;;;;;;;;x
+PROV3515;Dubno;;;;;;;;;;;;;x
+PROV3516;Ovruch;;;;;;;;;;;;;x
+PROV3517;Starokostiantyniv;;;;;;;;;;;;;x
+PROV3518;Radomis;;;;;;;;;;;;;x
+PROV3519;Cherkassy;;;;;;;;;;;;;x
+PROV3520;Gaysin;;;;;;;;;;;;;x
+PROV3521;Litin;;;;;;;;;;;;;x
+PROV3522;Turow;;;;;;;;;;;;;x
 PROV3523;Rew-ko;;;;;;;;;;;;;x
 PROV3524;Chain-Chaitun;;;;;;;;;;;;;x
 PROV3525;Payén;;;;;;;;;;;;;x
