fixed some loc, added low/high birthrate back

--- a/TGC/localisation/00_events-utility.csv
+++ b/TGC/localisation/00_events-utility.csv
@@ -88,9 +88,9 @@ EVTOPTC68;Pick Autocracy;;;;;;;;;;;;;x
 EVTOPTD68;Pick Equality;;;;;;;;;;;;;
 EVTOPTE68;Pick Liberty;;;;;;;;;;;;;
 EVTNAME69;National Campaign Menu, 1/3;;;;;;;;;;;;;x
-EVTDESC69;§BBirth Rate Campaign:§! Give the people in your country incentives to have children and form bigger families, increasing population growth.\n\n§BDiplomatic Campaign§!: Initiate a series of Diplomatic Actions to clear our name and make ammends with other countries, lowering our Infamy.\n\n§BAcademic Campaign§!: By making a series of concessions to Universities and other institutions, private or public, we will able to increase our Research Point production.;;;;;;;;;;;;;x
+EVTDESC69;§BMedium Birth Rate Campaign:§! Give the people in your country incentives to have children and form bigger families, increasing population growth.\n\n§BDiplomatic Campaign§!: Initiate a series of Diplomatic Actions to clear our name and make ammends with other countries, lowering our Infamy.\n\n§BAcademic Campaign§!: By making a series of concessions to Universities and other institutions, private or public, we will able to increase our Research Point production.;;;;;;;;;;;;;x
 EVTOPTA69;Remove all currently active National Campaigns;;;;;;;;;;;;;x
-EVTOPTB69;Birth Rate Campaign;;;;;;;;;;;;;x
+EVTOPTB69;Medium Birth Rate Campaign — §RWill Remove Low/High Birth Rate Campaigns!§!;;;;;;;;;;;;;x
 EVTOPTC69;Diplomatic Campaign;;;;;;;;;;;;;x
 EVTOPTD69;Academic Campaign;;;;;;;;;;;;;x
 EVTNAME70;National Campaign Menu, 2/3;;;;;;;;;;;;;x
@@ -99,6 +99,11 @@ EVTOPTA70;Colonial Settling Campaign;;;;;;;;;;;;;x
 EVTOPTB70;Anti Emigration Campaign;;;;;;;;;;;;;x
 EVTOPTC70;Tourism and Settlement Campaign;;;;;;;;;;;;;x
 EVTOPTD70;Open Direction Immigration Menu;;;;;;;;;;;;;x
+EVTNAME81;National Campaign Menu, 3/3;;;;;;;;;;;;;x
+EVTDESC81;§BLow Birth Rate Campaign:§! Give the people in your country incentives to have children and form bigger families, increasing population growth.\n\n§BHigh Birth Rate Campaign:§! Give the people in your country incentives to have children and form bigger families, increasing population growth.;;;;;;;;;;;;;x
+EVTOPTA81;Low Birth Rate Campaign — §RWill Remove Medium/High Birth Rate Campaigns!§!;;;;;;;;;;;;;x
+EVTOPTB81;High Birth Rate Campaign — §RWill Remove Low/Medium Birth Rate Campaigns!§!;;;;;;;;;;;;;x
+EVTOPTC81;Remove All Birth Rate Campaigns;;;;;;;;;;;;;x
 EVTNAME71;Multiplayer Menu;;;;;;;;;;;;;x
 EVTDESC71;§BAsk for Grants§!: Asks all other players for a Money Grant, they can choose to refuse it.\n\n§BAllow players to send me Grants§!: Players will be able to send grants to you.\n\n§BAllow players to ask me for Grants§!: Allows other players to ask you for grants, you can turn this off if they are spamming you.;;;;;;;;;;;;;x
 EVTOPTA71;Ask for Grants;;;;;;;;;;;;;x
