--- a/TGC/localisation/00_military-traits.csv
+++ b/TGC/localisation/00_military-traits.csv
@@ -102,7 +102,7 @@ merciless;Merciless §G+2 Attack §G+2 Defence;Impitoyable;Gnadenlos;;;;;;;;;;;x
 meticulous;Meticulous §B+1 Attack §R- 0.1 Speed;Méticuleux;Genau;;;;;;;;;;;x
 nationalist;Nationalist §W+1 Attack;;;;;;;;;;;;;x
 natural_born_leader;Natural Born Leader §W+1 Attack;Leader naturel;Geborener Anführer;;;;;;;;;;;x
-no_background §R-2 Attack §R-2 Defence;No Background;Aucun(e);Nichts;;;;;;;;;;;x
+no_background;§R-2 Attack §R-2 Defence;No Background;Aucun(e);Nichts;;;;;;;;;;;x
 no_personality;No Personality;Aucune;Nichts;;;;;;;;;;;x
 old_school;Old School §W+1 Attack §R-2 Defence;Vieille école;Alte Schule;;;;;;;;;;;x
 openminded;Openminded;Ouvert d'esprit;Offen;;;;;;;;;;;x
