--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1612,11 +1612,11 @@ antonio_conselheiro;Antônio Conselheiro;;;;;;;;;;;;;;x
 antonio_conselheiro_desc;Antônio Conselheiro now holds an important hole as counselor to the theocracy, which is fitting giving his surname.;;;;;;;;;;;;;x
 favelas;Favelas;;;;;;;;;;;;;;x
 favelas_desc;With the lack of proper housing, the poorest citizens, for a reason or another, end up in Favelas, crowded and poorly maintained housing on the outskirts of the city, usually on cliffsides and other places nobody else wants to build in.;;;;;;;;;;;;;;
-building_brasilia;Building Brasilia;;;;;;;;;;;;;;
-building_brasilia_desc;Our new capital is being built;;;;;;;;;;;;;;
-wild_puppet_debuff;Wild Puppet;;;;;;;;;;;;;;
-wild_puppet_debuff_desc;Our Overlord is trying to actively undermind us! Outrageous!;;;;;;;;;;;;;;
-wild_puppeter;Tigthing the Leash;;;;;;;;;;;;;;
-wild_puppeter_desc;Some of our vassals are getting a bit too out of control, but we are bullying them back into their place!;;;;;;;;;;;;;;
-tourism_campaign;Tourism and Settlement Campaign;;;;;;;;;;;;;;
-tourism_campaign_desc;;;;;;;;;;;;;;;
+building_brasilia;Building Brasilia;;;;;;;;;;;;;;x
+building_brasilia_desc;Our new capital is being built;;;;;;;;;;;;;;x
+wild_puppet_debuff;Wild Puppet;;;;;;;;;;;;;;x
+wild_puppet_debuff_desc;Our Overlord is trying to actively undermind us! Outrageous!;;;;;;;;;;;;;;x
+wild_puppeter;Tigthing the Leash;;;;;;;;;;;;;;x
+wild_puppeter_desc;Some of our vassals are getting a bit too out of control, but we are bullying them back into their place!;;;;;;;;;;;;;;x
+tourism_campaign;Tourism and Settlement Campaign;;;;;;;;;;;;;;x
+tourism_campaign_desc;§YCampaign Cost:§! Roughly §R20%§! of your maximum monthly tax income, every month.;;;;;;;;;;;;;;x
