--- a/TGC/localisation/00_decisions-options.csv
+++ b/TGC/localisation/00_decisions-options.csv
@@ -135,6 +135,8 @@ utility_will_not_receive_desc;This will mean we no longer will receive grants fr
 utility_will_not_receive_title;No More Grants!;;;;;;;;;;;;;x
 grant_menu_title;Grant Menu;;;;;;;;;;;;;x
 grant_menu_desc;Opens the Grant System Menu to ask other players for Money.;;;;;;;;;;;;;x
+option_end_game_title;End Game;;;;;;;;;;;;;x
+option_end_game_desc;End the game and see the score.;;;;;;;;;;;;;x
 override_research_campaign_title;Start a Research Campaign;;;;;;;;;;;;;x
 override_research_campaign_desc;We can redirect some of our annual budget to help along our scientists research for our country.;;;;;;;;;;;;;x
 override_research_campaign_remove_title;Stop the Research campaign;;;;;;;;;;;;;x
