fixed loc issue

--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -477,8 +477,8 @@ folkis_educates_desc;An efficient and modern compulsory school system is educati
 force_publique;Force Publique;;;;;;;;;;;;;x
 forced_expulsion;Expulsion Horrors;;;;;;;;;;;;;x
 forced_expulsion_desc;The local government of this province is forcibly moving parts of population out of it.;;;;;;;;;;;;;x
-forceful_back_to_africa;Back to Africa Act;;;;;;;;;;;;;;;;;;;x
-forceful_back_to_africa_desc;Without the shackles of the democratic rules, the government has declared an order for the forceful repatriation of all African diaspora cultures in our country.;;;;;;;;;;;;;;;;;;;x
+forceful_back_to_africa;Back to Africa Act;;;;;;;;;;;;;;;;;;x
+forceful_back_to_africa_desc;Without the shackles of the democratic rules, the government has declared an order for the forceful repatriation of all African diaspora cultures in our country.;;;;;;;;;;;;;;;;;;x
 foreign_claims;Foreign Claims;;;;;;;;;;;;;x
 foreign_claims_desc;Another nation is claiming this province, a claim that they will lose soon enough.;;;;;;;;;;;;;x
 foreign_smugglers;Foreign Smugglers;;;;;;;;;;;;;x
@@ -1607,16 +1607,16 @@ good_sanitation_desc;The city is clean, organized and disease free.;;;;;;;;;;;;;
 renovating_city;Renovating City;;;;;;;;;;;;;x
 renovating_city_desc;The city is under renovation, hopefully it doesn't take long.;;;;;;;;;;;;;x
 forced_vaccination;Compulsory Vaccination;;;;;;;;;;;;;x
-forced_vaccination_desc;;;;;;;;;;;;;;x
-antonio_conselheiro;Antônio Conselheiro;;;;;;;;;;;;;;x
+forced_vaccination_desc;;;;;;;;;;;;;x
+antonio_conselheiro;Antônio Conselheiro;;;;;;;;;;;;;x
 antonio_conselheiro_desc;Antônio Conselheiro now holds an important hole as counselor to the theocracy, which is fitting giving his surname.;;;;;;;;;;;;;x
-favelas;Favelas;;;;;;;;;;;;;;x
+favelas;Favelas;;;;;;;;;;;;;x
 favelas_desc;With the lack of proper housing, the poorest citizens, for a reason or another, end up in Favelas, crowded and poorly maintained housing on the outskirts of the city, usually on cliffsides and other places nobody else wants to build in.;;;;;;;;;;;;;;
-building_brasilia;Building Brasilia;;;;;;;;;;;;;;x
-building_brasilia_desc;Our new capital is being built;;;;;;;;;;;;;;x
-wild_puppet_debuff;Wild Puppet;;;;;;;;;;;;;;x
-wild_puppet_debuff_desc;Our Overlord is trying to actively undermind us! Outrageous!;;;;;;;;;;;;;;x
-wild_puppeter;Tigthing the Leash;;;;;;;;;;;;;;x
-wild_puppeter_desc;Some of our vassals are getting a bit too out of control, but we are bullying them back into their place!;;;;;;;;;;;;;;x
-tourism_campaign;Tourism and Settlement Campaign;;;;;;;;;;;;;;x
-tourism_campaign_desc;§YCampaign Cost:§! Roughly §R20%§! of your maximum monthly tax income, every month.;;;;;;;;;;;;;;x
+building_brasilia;Building Brasilia;;;;;;;;;;;;;x
+building_brasilia_desc;Our new capital is being built;;;;;;;;;;;;;x
+wild_puppet_debuff;Wild Puppet;;;;;;;;;;;;;x
+wild_puppet_debuff_desc;Our Overlord is trying to actively undermind us! Outrageous!;;;;;;;;;;;;;x
+wild_puppeter;Tigthing the Leash;;;;;;;;;;;;;x
+wild_puppeter_desc;Some of our vassals are getting a bit too out of control, but we are bullying them back into their place!;;;;;;;;;;;;;x
+tourism_campaign;Tourism and Settlement Campaign;;;;;;;;;;;;;x
+tourism_campaign_desc;§YCampaign Cost:§! Roughly §R20%§! of your maximum monthly tax income, every month.;;;;;;;;;;;;;x
