--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -665,7 +665,7 @@ jewish_diaspora;Jewish Diaspora;;;;;;;;;;;;;x
 jewish_diaspora_desc;The Jewish community is organizing in reaction to the creation of Israel.;;;;;;;;;;;;;x
 jewish_farms;Jewish Farmlands;;;;;;;;;;;;;x
 jewish_farms_desc;Jews who immigrated to Israel purchased land that was mostly semi-arid, although much had been rendered untillable by deforestation, soil erosion and neglect. They set about clearing rocky fields, constructing terraces, draining swampland, reforesting, counteracting soil erosion, and washing salty land. Since independence, the total area under cultivation has increased from 408,000 acres (1,650 sq. km) to 1,70,000 acres (4,300 sq. km), while the number of agricultural communities has increased from 400 to 725. Agricultural production has expanded 16 times, three times more than population growth.;;;;;;;;;;;;;x
-jim_crow;The Jim Crow Laws;;;;;;;;;;;;x
+jim_crow;The Jim Crow Laws;;;;;;;;;;;;;x
 jim_crow_desc;The Jim Crow laws mandate de jure racial segregation in all public facilities, with a supposedly 'separate but equal' status for black Americans.;;;;;;;;;;;;x
 jizya;Jizya;;;;;;;;;;;;;
 jizya_desc;The Jizya is a per capita yearly taxation historically levied in the form of financial charge on permanent non-Muslim subjects (dhimmi) in order to fund public expenditures of the state, in place of the Zakat and Khums that Muslims are obliged to pay. In return, the dhimmi are granted protected status under law.;;;;;;;;;;;;;
@@ -1607,7 +1607,7 @@ good_sanitation_desc;The city is clean, organized and disease free.;;;;;;;;;;;;;
 renovating_city;Renovating City;;;;;;;;;;;;;x
 renovating_city_desc;The city is under renovation, hopefully it doesn't take long.;;;;;;;;;;;;;x
 forced_vaccination;Compulsory Vaccination;;;;;;;;;;;;;x
-forced_vaccination_desc;;;;;;;;;;;;;x
+forced_vaccination_desc;;;;;;;;;;;;;;x
 antonio_conselheiro;Antônio Conselheiro;;;;;;;;;;;;;x
 antonio_conselheiro_desc;Antônio Conselheiro now holds an important hole as counselor to the theocracy, which is fitting giving his surname.;;;;;;;;;;;;;x
 favelas;Favelas;;;;;;;;;;;;;x
