fixed govtnames loc

--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1616,7 +1616,7 @@ building_brasilia;Building Brasilia;;;;;;;;;;;;;x
 building_brasilia_desc;Our new capital is being built;;;;;;;;;;;;;x
 wild_puppet_debuff;Wild Puppet;;;;;;;;;;;;;x
 wild_puppet_debuff_desc;Our Overlord is trying to actively undermind us! Outrageous!;;;;;;;;;;;;;x
-wild_puppeter;Tigthing the Leash;;;;;;;;;;;;;x
+wild_puppeter;Tightening the Leash;;;;;;;;;;;;;x
 wild_puppeter_desc;Some of our vassals are getting a bit too out of control, but we are bullying them back into their place!;;;;;;;;;;;;;x
 tourism_campaign;Tourism and Settlement Campaign;;;;;;;;;;;;;x
 tourism_campaign_desc;§YCampaign Cost:§! Roughly §R20%§! of your maximum monthly tax income, every month.;;;;;;;;;;;;;x
@@ -1624,7 +1624,7 @@ building_brasilia;Building Brasilia;;;;;;;;;;;;;x
 building_brasilia_desc;Our new capital is being built;;;;;;;;;;;;;x
 wild_puppet_debuff;Wild Puppet;;;;;;;;;;;;;x
 wild_puppet_debuff_desc;Our Overlord is trying to actively undermind us! Outrageous!;;;;;;;;;;;;;x
-wild_puppeter;Tigthing the Leash;;;;;;;;;;;;;x
+wild_puppeter;Tightening the Leash;;;;;;;;;;;;;x
 wild_puppeter_desc;Some of our vassals are getting a bit too out of control, but we are bullying them back into their place!;;;;;;;;;;;;;x
 tourism_campaign;Tourism and Settlement Campaign;;;;;;;;;;;;;x
 tourism_campaign_desc;§YCampaign Cost:§! Roughly §R20%§! of your maximum monthly tax income, every month.;;;;;;;;;;;;;;x
