added first part of renaming event

--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -303,7 +303,7 @@ PROV301;Canterbury;;;;;;;;;;;;;x
 PROV302;Brighton;;;;;;;;;;;;;x
 PROV303;Southampton;;;;;;;;;;;;;x
 PROV304;Isle of Man;;;;;;;;;;;;;x
-PROV305;Trondhjem;;;;;;;;;;;;;x
+PROV305;Trondheim;;;;;;;;;;;;;x
 PROV306;Bodø;;;;;;;;;;;;;x
 PROV307;Hammerfest;;;;;;;;;;;;;x
 PROV308;Ålesund;;;;;;;;;;;;;x
@@ -714,7 +714,7 @@ PROV712;Lodzj;;;;;;;;;;;;;x
 PROV713;Radom;;;;;;;;;;;;;x
 PROV714;Lisko;;;;;;;;;;;;;x
 PROV715;Ljublin;;;;;;;;;;;;;x
-PROV716;Kjeltsy;;;;;;;;;;;;;x
+PROV716;Kyeltsy;;;;;;;;;;;;;x
 PROV717;Kalish;;;;;;;;;;;;;x
 PROV718;Minsk;;;;;;;;;;;;;x
 PROV719;Byelostok;;;;;;;;;;;;;x
@@ -956,7 +956,7 @@ PROV954;Vinnitsa;;;;;;;;;;;;;x
 PROV955;Kamenets-Podoljskij;;;;;;;;;;;;;x
 PROV956;Rovno;;;;;;;;;;;;;x
 PROV957;Kovel;;;;;;;;;;;;;x
-PROV958;Kijev;;;;;;;;;;;;;x
+PROV958;Kiyev;;;;;;;;;;;;;x
 PROV959;Zhitomir;;;;;;;;;;;;;x
 PROV960;Berdychev;;;;;;;;;;;;;x
 PROV961;Uman;;;;;;;;;;;;;x
@@ -964,16 +964,16 @@ PROV962;Chernigov;;;;;;;;;;;;;x
 PROV963;Lubny;;;;;;;;;;;;;x
 PROV964;Simferopol;;;;;;;;;;;;;x
 PROV965;Kakhovka;;;;;;;;;;;;;x
-PROV966;Kerchj-Jenikol;;;;;;;;;;;;;x
+PROV966;Kerchj-yenikol;;;;;;;;;;;;;x
 PROV967;Sevastopol;;;;;;;;;;;;;x
 PROV968;Odessa;;;;;;;;;;;;;x
 PROV969;Tiraspol;;;;;;;;;;;;;x
-PROV970;Nikolajev;;;;;;;;;;;;;x
-PROV971;Jelisavetgrad;;;;;;;;;;;;;x
+PROV970;Nikolayev;;;;;;;;;;;;;x
+PROV971;Yelisavetgrad;;;;;;;;;;;;;x
 PROV972;Poltava;;;;;;;;;;;;;x
 PROV973;Melitopol;;;;;;;;;;;;;x
-PROV974;Jekaterinoslavl;;;;;;;;;;;;;x
-PROV975;Jeleno-Aleksandrovka;;;;;;;;;;;;;x
+PROV974;Yekaterinoslavl;;;;;;;;;;;;;x
+PROV975;Yeleno-Aleksandrovka;;;;;;;;;;;;;x
 PROV976;Mariupol;;;;;;;;;;;;;x
 PROV977;Kursku;;;;;;;;;;;;;x
 PROV978;Kharjkov;;;;;;;;;;;;;x
@@ -990,7 +990,7 @@ PROV988;Pudozhu;;;;;;;;;;;;;x
 PROV989;Vologda;;;;;;;;;;;;;x
 PROV990;Velikij Ustjug;;;;;;;;;;;;;x
 PROV991;Totjma;;;;;;;;;;;;;x
-PROV992;Bjelozersk;;;;;;;;;;;;;x
+PROV992;Byelozersk;;;;;;;;;;;;;x
 PROV993;Vytegra;;;;;;;;;;;;;x
 PROV994;Sankt Peterburg;;;;;;;;;;;;;x
 PROV995;Petrozavodsk;;;;;;;;;;;;;x
@@ -3898,7 +3898,7 @@ PROV3896;Naupa Huen;;;;;;;;;;;;;x
 PROV3897;Pelicurá;;;;;;;;;;;;;x
 PROV3898;Aleksandrovskoye;;;;;;;;;;;;;x
 PROV3899;Bashanta;;;;;;;;;;;;;x
-PROV3900;Jejsku;;;;;;;;;;;;;x
+PROV3900;Yejsku;;;;;;;;;;;;;x
 PROV3901;Kavkazkaya;;;;;;;;;;;;;x
 PROV3902;Lazarevskoye;;;;;;;;;;;;;x
 PROV3903;Krasnaya Polyana;;;;;;;;;;;;;x
