--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -975,7 +975,7 @@ PROV973;Melitopol;;;;;;;;;;;;;x
 PROV974;Jekaterinoslavl;;;;;;;;;;;;;x
 PROV975;Jeleno-Aleksandrovka;;;;;;;;;;;;;x
 PROV976;Mariupol;;;;;;;;;;;;;x
-PROV977;Kursku;;;;;;;;;;;;;x
+PROV977;Kursk;;;;;;;;;;;;;x
 PROV978;Kharjkov;;;;;;;;;;;;;x
 PROV979;Novo-Cherkask;;;;;;;;;;;;;x
 PROV980;Rossoshi-Potudan;;;;;;;;;;;;;x
@@ -986,7 +986,7 @@ PROV984;Ukhtinskaja;;;;;;;;;;;;;x
 PROV985;Mezen;;;;;;;;;;;;;x
 PROV986;Oskinskaja;;;;;;;;;;;;;x
 PROV987;Ustj-Sysoljsku;;;;;;;;;;;;;x
-PROV988;Pudozhu;;;;;;;;;;;;;x
+PROV988;Pudozh;;;;;;;;;;;;;x
 PROV989;Vologda;;;;;;;;;;;;;x
 PROV990;Velikij Ustjug;;;;;;;;;;;;;x
 PROV991;Totjma;;;;;;;;;;;;;x
