fixed some bugs

--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -709,11 +709,11 @@ PROV707;Suvalki;;;;;;;;;;;;;x
 PROV708;Plotsk;;;;;;;;;;;;;x
 PROV709;Lomzha;;;;;;;;;;;;;x
 PROV710;Skernevitsy;;;;;;;;;;;;;x
-PROV711;Syedlets;;;;;;;;;;;;;x
-PROV712;Lodzj;;;;;;;;;;;;;x
+PROV711;Lyublin;;;;;;;;;;;;;x
+PROV712;Lodz;;;;;;;;;;;;;x
 PROV713;Radom;;;;;;;;;;;;;x
 PROV714;Lisko;;;;;;;;;;;;;x
-PROV715;Ljublin;;;;;;;;;;;;;x
+PROV715;Biala;;;;;;;;;;;;;x
 PROV716;Kjeltsy;;;;;;;;;;;;;x
 PROV717;Kalish;;;;;;;;;;;;;x
 PROV718;Minsk;;;;;;;;;;;;;x
@@ -3507,7 +3507,7 @@ PROV3505;Panevezys;;;;;;;;;;;;;x
 PROV3506;Piotrkow;;;;;;;;;;;;;x
 PROV3507;Ostroleka;;;;;;;;;;;;;x
 PROV3508;Siedlce;;;;;;;;;;;;;x
-PROV3509;Rzeszow;;;;;;;;;;;;;x
+PROV3509;Kholm;;;;;;;;;;;;;x
 PROV3510;Wilejka;;;;;;;;;;;;;x
 PROV3511;Swieciany;;;;;;;;;;;;;x
 PROV3512;Borysow;;;;;;;;;;;;;x
