--- a/TGC/localisation/00_decisions.csv
+++ b/TGC/localisation/00_decisions.csv
@@ -3603,3 +3603,5 @@ mamluk_coup_egypt_title;The Mamluk Return;;;;;;;;;;;;;x
 mamluk_coup_egypt_desc;The Mamluks in the Sudan agitate constantly to make their way back to their ancestral domain of Egypt, ripped away from them not so very long ago by the machinations of Muhammed Ali. §RWhile under normal circumstances they would merely wait for a political failure of the Pasha to make their move from the Sudan, a comprehensive enough military victory against the Egyptians in their invasion may prove to be more than enough cause to restore their domain.;;;;;;;;;;;;;x
 press_schleswig_issue_title;Press the Schleswig Issue;;;;;;;;;;;;;x
 press_schleswig_issue_desc;;;;;;;;;;;;;;x
+austrian_naples_title;Restore the Habsburgs to Naples;;;;;;;;;;;;;
+austrian_naples_desc;The Habsburg dynasty once controlled the Kingdom of Sicily as its own domain, beholden to the wider Austrian Empire. The continued occupation of the Bourbon realm leaves it defenseless against a reassertion of the old familial claims.;;;;;;;;;;;;;
