--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -1431,3 +1431,54 @@ EVTDESC9044;In an unexpected twist of events, the Egyptian expedition to the Sud
 EVTOPTA9044;This was a terrible plan.;;;;;;;;;;;;;x
 EVTNAME9045;The return of the Mamluks;;;;;;;;;;;;;x
 EVTDESC9045;The failure of Muhammed Ali Pasha to purge the Mamluks in the Sudan proved to be his undoing. Despite his realm remaining at least nominally independent of the Ottomans in the aftermath of the Oriental crisis, the humiliation suffered on the international stage gave the opportunity for the Mamluks to return to Egypt once again. Muhammed Ali was captured within his palace, before being hung in the streets of Cairo at midnight. The Mamluk return was immediately followed by a purge of his supporters and the mercenary armies he relied upon, bringing a return of not only the aristocratic Mamluk oligarchy, but its grasp of the Egyptian institutions. Muhammed's reforms were undone in full, and Egypt for the time being was restored to the status quo of before Napoleon's invasion.;;;;;;;;;;;;;x
+EVTNAME9046;The siege of Diriyah;;;;;;;;;;;;;
+EVTDESC9046;The Ottomans began the Najd Expedition in 1818, involving a series of military conflicts. En route to Dariyya, the Ottoman armies executed everyone over ten years age in Dhurma. Ibrahim's forces marched towards Diriyya during the early months of 1818, easily routing Saudi resistance, and arrived at the capital by April 1818. The Siege of Diriyah would last until September 1818, with the Ottoman forces waiting for Saudi supplies to run out. On 11 September 1818, Abdullah Ibn Saud sued for peace, offering his surrender, in exchange for sparing Diriyya. However, Al Diriyya was razed to ground under orders of Ibrahim Pasha. This marked the effective end of Saudi resistance.;;;;;;;;;;;;;
+EVTOPTA9046;The Saudi threat is no more.;;;;;;;;;;;;;
+EVTNAME9047;The siege of Damascus;;;;;;;;;;;;;
+EVTDESC9047;The Najd Expedition was met with fierce resistance from the Saudi state, and was forced to retreat from the interior after a set of humiliating defeats. Ibrahim Pasha's forces were forced to retreat towards the Ottoman Levant, and were laid siege to in the city of Damascus. The city was ultimately surrendered in September of 1818, a stunning turnaround in a conflict many in the Ottoman government expected to be a one-sided war.;;;;;;;;;;;;;
+EVTOPTA9047;The Wahhabis shall rule Arabia!;;;;;;;;;;;;;
+EVTNAME9048;The siege of Baghdad;;;;;;;;;;;;;
+EVTDESC9048;The Najd Expedition under Ibrahim Pasha met monumental failure, due to the stiff and unexpected resistance of the Wahhabi state. The forces of Ibrahim Pasha were forced to retreat north and west into predominantly Ottoman lands, and the Mamluks of Iraq were left to fend for themselves. The siege of Baghdad lasted into December of 1818, when the city was taken by the Wahhabis. The Saudis took advantage of this victory, proclaiming the end of the Ottoman Caliphate. The war, however, was not yet over.;;;;;;;;;;;;;
+EVTOPTA9048;The Ottomans shall fall!;;;;;;;;;;;;;
+EVTNAME9049;The siege of Alexandria;;;;;;;;;;;;;
+EVTDESC9049;The failure of the Ottoman Empire was rendered complete in a manner not even the Saudis could predict when, in a radical turn of events, the Saudi army successfully marched into the interior of Egypt and laid siege to the crucial city of Alexandria. Mohammed Ali Pasha, the governor of Egypt, found his ambitions rendered void when the city fell in July 1819, and the territories of Egypt fell into the lap of the Wahhabi rebels. With all of Arabia and Egypt under the control of the rebels, this all but guaranteed the fall of the Ottomans to their arms.;;;;;;;;;;;;;
+EVTOPTA9049;A new caliphate is rising.;;;;;;;;;;;;;
+EVTNAME9050;The Treaty of Diriyah;;;;;;;;;;;;;
+EVTDESC9050;In 1820, the Ottoman-Saudi war ended in a catastrophic defeat for the Sultan in Constantinople. All of the Levant, Iraq, and Egypt were lost to the Wahhabis in a mere 5 years, a feat of conquest only comparable to the rise of the first Caliphate from Arabia. The loss of these crucial territories also cost the Turks their holdings across North Africa, the myriad semi-independent governments in the north declaring their independence from Constantinople. Facing the possibility of total collapse, the Sultan was forced to sign a humiliating peace, recognizing the conquests of the Saudis in Arabia and beyond. The Saudis, for their own part, wasted no time proclaiming their dominion over Arabia as the true caliphate.;;;;;;;;;;;;;
+EVTOPTA9050;A glorious victory!;;;;;;;;;;;;;
+EVTNAME9051;The July Constitution;;;;;;;;;;;;;
+EVTDESC9051;In 1820 a revolution planned by Carbonari and their supporters, aimed at obtaining a written constitution inspired by the same in Spain, rose against the government. While they failed to seize the reigns of government, King Ferdinand nevertheless felt compelled by the unwillingness of his own armed forced to put down the insurgency to grant the constitution sought by the liberals on the 13th of July. That same month, a revolution broke out in Palermo, Sicily, but was quickly suppressed. Rebels from Naples also occupied Benevento and Pontecorvo, two enclaves belonging to the Papal States.;;;;;;;;;;;;;
+EVTOPTA9051;A new constitution will ease tensions.;;;;;;;;;;;;;
+EVTOPTB9051;The authority of the king must remain absolute.;;;;;;;;;;;;;
+EVTNAME9052;The Congress of Troppau;;;;;;;;;;;;;
+EVTDESC9052;The Congress of Troppau was a meeting of the Holy Alliance between Prussia, Austria, and Russia in Troppau in Silesia. The meeting was in response to the liberal revolution that took place within Two Sicilies. The powers of Great Britain and France were excluded from the meeting, as the signatory powers concluded that nations they deemed as having undergone a revolution should not be allowed to attend.;;;;;;;;;;;;;
+EVTOPTA9052;Invite only the Holy Alliance.;;;;;;;;;;;;;
+EVTOPTB9052;Invite the French and British delegations as well.;;;;;;;;;;;;;
+EVTOPTC9052;The matters of Sicily are none of our concern.;;;;;;;;;;;;;
+EVTOPTD9052;The Congress be damned! We need no justification.;;;;;;;;;;;;;
+EVTNAME9053;The Congress of Troppau;;;;;;;;;;;;;
+EVTDESC9053;The Congress of Troppau was a meeting of the Quintuple Alliance in Troppau in order to discuss the matter of the revolution in Sicily. The members of the Holy Alliance met to affirm the need to intervene in Two Sicilies, as well as the right of the member states of the Triple Alliance in the east to intervene military so as to force member states that undergo a revolution back into the alliance. The most important proposal of the meeting was that of intervention in Two Sicilies.;;;;;;;;;;;;;
+EVTOPTA9053;We greenlight the intervention.;;;;;;;;;;;;;
+EVTOPTB9053;We shall not take sides.;;;;;;;;;;;;;
+EVTOPTC9053;We object to the proposal.;;;;;;;;;;;;;
+EVTNAME9054;The Congress of Troppau failed!;;;;;;;;;;;;;
+EVTDESC9054;The meeting of the Congress of Troppau derailed the moment an objection was voiced by one of the main signatories. The nation of $FROMCOUNTRY$ objected strongly to any intervention in Sicilian affairs, and the meeting between the powers devolved into partisan bickering over the issue. The ability for the Quintuple Alliance to quell foreign revolutions was thoroughly shaken, and further meetings on the subject were shut down.;;;;;;;;;;;;;
+EVTOPTA9054;The meeting was a failure.;;;;;;;;;;;;;
+EVTOPTB9054;We shall intervene regardless!;;;;;;;;;;;;;
+EVTNAME9055;The Second Meeting at Laibach;;;;;;;;;;;;;
+EVTDESC9055;The Congress at Laibach was scheduled to meet in January of 1821, after the end of the meeting at Troppau. In this instance, the King of Sicily attended the meeting, as did Prussian and French plenipotentiaries. The meeting underscored a divide between the British and the other signatories of the treaty, as in this instance the British legation did directly object to the conclusions of the Congress regarding Sicily, as the logic that allowed this intervention was theoretically sufficient to justify a similar invasion of the United Kingdom. 50,000 Austrian troops were marched into Sicily, and in front of the army as it paraded in Naples, king Ferdinand of the Two Sicilies abolished the constitution.;;;;;;;;;;;;;
+EVTOPTA9055;The revolution will never come to Sicily.;;;;;;;;;;;;;
+EVTNAME9056;Abrogation of the Sicilian Constitution;;;;;;;;;;;;;
+EVTDESC9056;The reaction of the Congress of Europe to the constitution in Two Sicilies was to call upon the Congress of Troppau in 1820, resolving that Sicily needed to be returned to the fold, by force if necessary. This congress was followed up by a later Congress of Laibach, reaffirming this principle alongside the king of Two Sicilies, Ferdinand. Austrian troops were invited into the nation, and in the presence of 50,000 Austrian soldiers, the king abrogated the constitution. In response, Carbonari under Guglielmo Pepe raised a band of irregulars to take on the Austrian occupation.;;;;;;;;;;;;;
+EVTOPTA9056;The Carbonari were defeated!;;;;;;;;;;;;;
+EVTOPTB9056;The Austrian Occupation is forced to retreat!;;;;;;;;;;;;;
+EVTNAME9057;The Austrian Occupation of Two Sicilies;;;;;;;;;;;;;
+EVTDESC9057;The Austrian army remained in Two Sicilies after their entry into the nation in order to quell the possibility of further revolutions against the standing government. This action, however, remained a diplomatic thorn in the side of the Austrian Empire for years to come. (To get rid of the modifier, release Sicily.);;;;;;;;;;;;;
+EVTOPTA9057;The army will leave when there is order.;;;;;;;;;;;;;
+EVTNAME9058;The Austrian Withdrawal;;;;;;;;;;;;;
+EVTDESC9058;The Sicilian government by 1827 appeared to be sufficiently guarded against further revolution, and the Austrian Empire had further obligations elsewhere, so it was time for the occupation to leave.;;;;;;;;;;;;;
+EVTOPTA9058;We have done what we can.;;;;;;;;;;;;;
+EVTOPTB9058;Leave? Naples has long been in the Austrian sphere.;;;;;;;;;;;;;
+EVTNAME9059;The Austrian Withdrawal;;;;;;;;;;;;;
+EVTDESC9059;Whether by force or by choice, the Austrian government left Two Sicilies, and the diplomatic weight it bore left the shoulders of Vienna.;;;;;;;;;;;;;
+EVTOPTA9059;Good riddance.;;;;;;;;;;;;;
